@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Slider.cxx,v 1.8.2.10.2.2 2001/10/18 23:41:04 easysw Exp $"
+// "$Id: Fl_Slider.cxx,v 1.8.2.10.2.3 2001/11/03 19:24:22 easysw Exp $"
 //
 // Slider widget for the Fast Light Tool Kit (FLTK).
 //
@@ -181,7 +181,7 @@ int Fl_Slider::handle(int event, int x, int y, int w, int h) {
   switch (event) {
   case FL_PUSH:
     if (!Fl::event_inside(x, y, w, h)) return 0;
-    take_focus();
+    if (Fl::visible_focus()) take_focus();
     handle_push();
   case FL_DRAG: {
 
@@ -270,8 +270,10 @@ int Fl_Slider::handle(int event, int x, int y, int w, int h) {
     break;
   case FL_FOCUS :
   case FL_UNFOCUS :
-    damage(FL_DAMAGE_ALL);
-    return 1;
+    if (Fl::visible_focus()) {
+      redraw();
+      return 1;
+    } else return 0;
   case FL_ENTER :
   case FL_LEAVE :
     return 1;
@@ -289,5 +291,5 @@ int Fl_Slider::handle(int event) {
 }
 
 //
-// End of "$Id: Fl_Slider.cxx,v 1.8.2.10.2.2 2001/10/18 23:41:04 easysw Exp $".
+// End of "$Id: Fl_Slider.cxx,v 1.8.2.10.2.3 2001/11/03 19:24:22 easysw Exp $".
 //
