@@ -14,6 +14,10 @@ CHANGES IN FLTK 1.1.0
 	  whether the focus box is drawn.
 	- The focus box is now drawn using the contrast color.
 	- Fl_Repeat_Button didn't accept keyboard focus.
+	- Added new Fl::visible_focus() method and standard
+	  "-kbd" and "-nokbd" options in Fl::args() processing
+	  to control whether keyboard focus is shown and handled
+	  by non-text widgets.
 
 
 CHANGES IN FLTK 1.1.0b5
